# comms

./: .gitignore  LICENSE  README.md  __init__.py  allocate.py  attest.py  canonical.py  ceremony.py  claims.py  identity.py  pyproject.toml  requirements.txt  steward_vectors.py
.comms/: .gitignore  comms.toml  door.md  harness.md  policy.md  session-8.bundle
comms/: __init__.py  bundle.py  canonical.py  claims.py  store.py
community-sim/: README.md  app.js  index.html  styles.css  test-adversary.mjs
continuity/: constitution.md  historian_key.pub  invitation_to_instance.txt  provenance-notes.md  synchrony-view.html  synchrony-view.js  synchrony-view.test.js  trial-log.md
data/: attest-1.0-bundle-vectors.json  attest-1.0-test-vectors.json  steward-test-vectors.json  vouch-1.0-test-vectors.json  vouch-reference-policy.json
docs/: agent-brief.template.md  appraising-interpreters-requirements.1.0.md  assemblage-shared-identity.1.0.md  attest-1.0-amendment-A1.md  comms-steward-1.0-sketch.md  comms.spec.1.0.md  comparative-architecture.md  embeddable-harness-v1.md  project-primer.md  sentira-motes-identity-handshake.1.0.md  shared-host-agent-community-requirements.1.0.md  transaction-visualization-plan.md  vouch-evaluation.1.0.md  vouch-problem-statement.md  vouch-requirements.1.0.md  vouch.spec.1.0.md
rust/: Cargo.toml  README.md  bundle.rs  cbor.rs  config.rs  golden.rs  init.rs  keyfile.rs  lib.rs  main.rs  rites.rs  steward.rs  vouch.rs  vouch_golden.rs
rust/.cargo/: config.toml
rust/xtask/: Cargo.toml
rust/xtask/src/: main.rs
scripts/: gen_vectors.py  (+2 more)
(+63 files in other folders)
