[workspace]
# The root package (comms-core) plus the cargo task runner. Sharing one target/
# keeps `cargo xtask` and the binary in step.
members = ["xtask"]

[package]
name = "comms-core"
version = "0.1.0"
edition = "2021"
description = "Reference core for Comms Attest 1.0 (+A1) and Steward 1.0: protocol substrate only, no notion of trust"

[lib]
name = "comms_core"
path = "lib.rs"

[dependencies]
ed25519-dalek = "2"
blake3 = "1"
bs58 = "0.5"
# Pure-Rust; used to read/write steward key files ({seed_b58,label}) and to
# emit `inspect --json`. Keeps the binary statically linkable (no system libs).
serde_json = "1"

[dev-dependencies]
hex = "0.4"

[[bin]]
name = "comms-verify"
path = "main.rs"

[[test]]
name = "golden"
path = "golden.rs"

[[test]]
name = "vouch_golden"
path = "vouch_golden.rs"
